[package]
name = "metaserve-client"
version = "0.1.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
edition = "2021"

[dependencies]
quinn = { version = "0.8", default-features = false }
metaserve-proto = { path = "../proto" }
bincode = "1.0.1"
tokio = { version = "1.17", default-features = false }
thiserror = "1"
futures-util = "0.3"

[dev-dependencies]
quinn = { version = "0.8", default-features = false, features = ["tls-rustls", "ring"] }
tokio = { version = "1.17", default-features = false, features = ["macros", "rt"] }
anyhow = "1"
clap = { version = "3.1", features = ["derive"] }
rustls = "0.20"
