[package]
name = "masterserve-daemon"
version = "0.1.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]

[dependencies]
quinn = { git = "https://github.com/djc/quinn.git" }
tokio = "0.1.11"
tokio-current-thread = "0.1"
futures = "0.1"
masterserve-proto = { path = "../proto" }
slog = "2.1"
slog-term = "2"
structopt = "0.2.12"
failure = "0.1"
bincode = "1.0.1"
byteorder = "1.2"
