[package]
name = "masterserve-daemon"
version = "0.1.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
edition = "2018"

[dependencies]
quinn = "0.2"
tokio = "0.1.11"
tokio-current-thread = "0.1"
futures = "0.1"
masterserve-proto = { path = "../proto" }
slog = "2.1"
slog-term = "2"
structopt = "0.2.12"
failure = "0.1"
bincode = "1.0.1"
byteorder = "1.2"
