[package]
name = "masterserve-heartbeat"
version = "0.1.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
edition = "2018"

[dependencies]
quinn = { git = "https://github.com/djc/quinn.git" }
futures = "0.1"
masterserve-proto = { path = "../proto" }
tokio = "0.1"
err-derive = "0.1"

[dev-dependencies]
tokio-current-thread = "0.1"
structopt = "0.2.12"
failure = "0.1"

[[example]]
name = "hello"
